feat(auth): register
